--- a/src/app/shared/ui/button/button/button.component.scss
+++ b/src/app/shared/ui/button/button/button.component.scss
@@ -1,15 +1,25 @@
 button {
   min-width: 200px;
-  min-height: 40px;
+  min-height: 50px;
   padding: 10px;
   border-radius: 45px;
   background-color: #0296FF;
   border: none;
 
+  cursor: pointer;
+
   color: #FFF;
   font-family: Nunito;
-  font-size: 16px;
+  font-size: 19px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  svg {
+    margin-left: 10px;
+  }
 }
