--- a/src/app/shared/ui/input/input/input.component.scss
+++ b/src/app/shared/ui/input/input/input.component.scss
@@ -1,6 +1,7 @@
 .input-group {
   position: relative;
   width: 100%;
+  position: relative;
 
   input {
     width: 100%;
@@ -10,6 +11,13 @@
     position: relative;
     z-index: 1;
     box-sizing: border-box;
+
+    font-size: 15px;
+
+    &:focus {
+      outline: none;
+      border-color: #0296FF;
+    }
   }
 
   label {
@@ -18,7 +26,14 @@
     left: 10px;
     background-color: white;
     padding: 0 5px;
-    font-size: 14px;
+    font-size: 17px;
+    z-index: 2;
+  }
+
+  svg {
+    position: absolute;
+    top: 35%;
+    right: 15px;
     z-index: 2;
   }
 }
