--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'nunito';
+  src: url('./assets/fonts/Nunito-VariableFont_wght.ttf');
+}
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'nunito';
+}
+
+// INSERINDO INPUT GROUP TEMPORARIAMENTE AQUI
+
+.input-group {
+  position: relative;
+  width: 100%;
+  position: relative;
+
+  input:not(input[type='radio']) {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+    box-sizing: border-box;
+
+    font-size: 15px;
+
+    &:focus {
+      outline: none;
+      border-color: #0296FF;
+    }
+  }
+
+  label {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: white;
+    padding: 0 5px;
+    font-size: 17px;
+    z-index: 2;
+  }
+
+  svg {
+    position: absolute;
+    top: 35%;
+    right: 15px;
+    z-index: 2;
+  }
 }
