+ JWT Authentication, Conexão entre server-java e Front Application

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,5 +1,6 @@
 <app-register-modal [isOpen]="false" />
 <app-forget-pass-modal [isOpen]="false" />
+<app-alert />
 
 <div class="banner-image">
   <div>
