--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header [signed]="false"></app-header>
+<app-header></app-header>
 <div class="page">
   <router-outlet></router-outlet>
 </div>
