--- a/src/app/shared/ui/button/button/button.component.html
+++ b/src/app/shared/ui/button/button/button.component.html
@@ -1,4 +1,4 @@
-<button type="{{type}}" [ngStyle]="customStyles">
+<button type="{{type}}" class="{{styleType}}" [ngStyle]="customStyles">
   {{name}}
   <svg *ngIf="svgLogin" width="69" height="24" viewBox="0 0 69 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g id="icp-brasil-horizontal 1">
