--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -7,8 +7,8 @@
 
     <div class="user-div" *ngIf="signed">
       <div class="info">
-        <span>{{username}}</span>
-        <span>{{crm}}</span>
+        <span>Dr. {{username}}</span>
+        <span>CRM-SC {{crm}}</span>
       </div>
       <svg width="50" height="50" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_45_234)">
