--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,22 @@
 .page {
   width: 100%;
-  height: 100%;
+  min-height: 100dvh;
+  min-height: 100vh;
+
+  &.logged {
+    display: flex;
+
+    overflow: hidden;
+
+    .navbar-component {
+      width: 18%;
+    }
+
+    .page-content {
+      flex: 2;
+      min-height: 100%;
+    }
+  }
+
+
 }
